[package]
name = "actix-plus-tonic"
version = "0.1.0"
authors = [""]
edition = "2018"

[[bin]] # Bin to run the Actix server
name = "frontend-server-actix"
path = "src/main.rs"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "backend-server-tonic"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "test-client-tonic"
path = "src/client.rs"

[dependencies]
# Needed for Actix Web
actix-web = "3"

# Needed for Tonic
tonic = "0.5"
prost = "0.8"
tokio = { version = "1.8.1", features = ["macros", "rt-multi-thread"] }

# Needed for implementation
env_logger = "0.9"
log = "0.4"

[build-dependencies]
# Needed for Tonic
tonic-build = "0.5"
